# fractional-bond-trading

./: .gitignore  README.md  example.deployment-info.json  hardhat.config.js  package-lock.json  package.json  pyproject.toml
contracts/: BondFactory.sol  BondMarketPlace.sol  ITokenizedBond.sol  MockStableCoin.sol  TokenizedBond.sol
data_util/: bond_rebalancer.py  config.py  generate_synthetic_data.py  run_rebalancer.py
frontend/: .env  .gitignore  README.md  config-overrides.js  package-lock.json  package.json
frontend/public/: site.css
frontend/src/: App.tsx  chain.config.ts  index.tsx
frontend/src/app/: client.ts  globals.css  layout.tsx  page.tsx
frontend/src/components/: bond-card.tsx  bond-form.tsx  createBond.tsx  exchange-bond.tsx  footer.tsx  history-chart.tsx  market-buy-interface.tsx  market-card-skeleton.tsx  market-card.tsx  market-create-dialog.tsx  market-pending.tsx  market-resolve-interface.tsx  market-resolved.tsx  market-shares-display.tsx  market-time.tsx  menu-bar.tsx  navbar.tsx  predictionMarketDashboard.tsx  test.tsx  test_all.tsx  (+4 more)
interface/: package-lock.json  package.json
scripts/: deploy-bond-factory-local.js  deploy-bond-factory-sepolia.js  deploy-bond-factory.js  deploy-bond-marketplace-local.js  deploy-bond-marketplace.js  deploy-sepolia-final.js  deploy-sepolia.js  deploy-tokenized-bond-local.js  deploy-tokenized-bond.js  interact-deployed.js  run_rebalance.js
scripts/archived/: deploy-bond-factory-sepolia.js  deploy-mock-stable-coin-sepolia.js
test/: test-bond-marketplace.js  test-tokenized-bond.js
utils/: loggers.js
(+47 files in other folders)
